src/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Company_Name__c</fullName>
        <label>Brand Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyField__c</fullName>
        <label>CurrencyField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimationFormula__c</fullName>
        <formula>IF(ISPICKVAL(Estimation_Apporved__c,&apos;Approved&apos;),&apos;check&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EstimationFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimation_Apporved__c</fullName>
        <label>Estimation Apporved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Service_Charge__c</fullName>
        <label>Minimum Service Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_test__c</fullName>
        <formula>IF(

OR
(
TEXT(Estimation_Apporved__c) =&apos;Approved&apos;,
TEXT(Estimation_Apporved__c) =&apos;Rejected&apos;
),
&apos;check&apos;,&apos;Not checked&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picklist test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Estimate__c</fullName>
        <label>Service Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temporary__c</fullName>
        <label>Temporary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestCropString__c</fullName>
        <formula>LEFT(Brand_Company_Name__c,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestCropString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calculated_Date_field__c</fullName>
        <formula>DATETIMEVALUE(TEXT(YEAR(due_date__c))+&quot;-&quot; +TEXT(MONTH(due_date__c))+&quot;-&quot; +TEXT(DAY(due_date__c))+&quot; &quot;+&apos;00:00:00&apos;)+14</formula>
        <label>calculated Date field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cehck_time_2__c</fullName>
        <label>cehck time 2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>cehck_time_diff__c</fullName>
        <formula>(cehck_time_2__c -checkc__c)/(60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cehck time diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>checkboxdatefield__c</fullName>
        <formula>IF(CurrencyField__c=0,false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>checkboxdatefield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkc__c</fullName>
        <label>check</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>checkcal__c</fullName>
        <formula>IF(Service_Estimate__c!=0,Minimum_Service_Charge__c*Service_Estimate__c,Minimum_Service_Charge__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>checkcal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date2__c</fullName>
        <label>date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_difference__c</fullName>
        <formula>Date1__c-date2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>date difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>due_date__c</fullName>
        <label>due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>getState__c</fullName>
        <formula>IF(
 AND( PostCode__c &gt;=1,PostCode__c&lt;=10), &quot;VIC&quot;,
 IF( AND( PostCode__c &gt;=11,PostCode__c&lt;=20), &quot;LIC&quot;,
 IF(AND( PostCode__c &gt;=21,PostCode__c&lt;=30), &quot;MIC&quot;,	   
 &quot;Other&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>getState</label>
        <type>Text</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Registration_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Brand_Company_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>temp_Car</fullName>
        <filterScope>Queue</filterScope>
        <label>temp</label>
        <queue>temp</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <recordTypes>
        <fullName>Accidental</fullName>
        <active>true</active>
        <label>Accidental</label>
    </recordTypes>
    <recordTypes>
        <fullName>Running_Service</fullName>
        <active>true</active>
        <label>Running Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Match_Billing_Address</fullName>
        <active>false</active>
        <errorConditionFormula>if ( Account__r.Match_Billing_Address__c ,true,false)</errorConditionFormula>
        <errorMessage>wah chal gaya</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Brand_Company_Name__c),
NOT(CONTAINS(Brand_Company_Name__c,&apos;United Kingdom&apos; )))</errorConditionFormula>
        <errorMessage>check</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_clone_lookup</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCLONE(),  
ISBLANK(Account__c),
ISCHANGED(Account__c)
)</errorConditionFormula>
        <errorMessage>ok check if lookup working</errorMessage>
    </validationRules>
</CustomObject>